--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
         </p>
     </div>
   <script>
-    var plage=2
+    var plage=10
       var fin=plage
       var debut=1
+      
       function butonclickGet(){
         console.log(debut,fin)
-        if(debut>1){
+        if(fin>plage){
           fin=fin-plage
         }
         var URL='https://vilajadmin.herokuapp.com/stats?_start='+debut+'&_limit='+fin
         $.get(URL,(data,status)=>{
             //data se limen ou pral pran pou afiche an
             console.log(data)
+            
         })
         .then(()=>{
             debut=debut+plage
