--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .then(()=>{
             debut=debut+plage
             fin=fin+plage
-            //console.log(debut,fin)
+            console.log(debut,fin)
         });
         
       }
